# DataSim

./: README.md  pyproject.toml
datasim/: __init__.py
datasim/core/: base.py
datasim/fields/: base.py  boolean.py  choice.py  datetime.py  dict.py  list.py  nullable.py  numeric.py  string.py
datasim/generators/: dataset.py  row.py
datasim/writers/: __init__.py  base.py  csv.py  json.py
docs/: index.md  installation.md  quick_start.md
docs/usage/: configuration_data.md  custom_fields.md  custom_writers.md  examples.md
